# actuarialpy-core

./: CHANGELOG.md  README.md  pyproject.toml
actuarialpy/: __init__.py  columns.py  compare.py  completion.py  components.py  forecast.py  trend.py
examples/: README.md  _sample_data.py  claimant_concentration.py  credibility.py  experience_basics.py  lifecycle_and_banding.py  reserving_ibnr.py  seasonality.py  trend_and_forecast.py
src/actuarialpy/: __init__.py  banding.py  cohorts.py  columns.py  concentration.py  contribution.py  credibility.py  decomposition.py  expected.py  experience.py  forecast.py  frame.py  lifecycle.py  margins.py  metrics.py  periods.py  pooling.py  profiles.py  reporting.py  reserving.py  rolling.py  seasonality.py  trend.py
tests/: test_apply_completion.py  test_ave_column_order.py  test_cohort_coverage.py  test_compare_actual_to_expected.py  test_completion.py  test_corrections.py  test_credibility.py  test_credibility_limited_fluctuation.py  test_decomposition.py  test_experience_analysis.py  test_lifecycle.py  test_reserving.py  test_restored_integration.py  test_retention.py  test_rolling_cohort_forecast.py  test_seasonality.py  test_trend_compare_reporting.py  test_view_column_order.py
