[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actuarialpy"
version = "0.7.0"
description = "Primitive-based Python tools for actuarial analysis."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Michael Bryant" }
]
keywords = ["actuarial", "insurance", "loss ratio", "risk", "analytics", "claims"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]
dev = ["pytest>=7", "build>=1", "twine>=5", "ruff>=0.4", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/actuarialpy/actuarialpy-core"
Repository = "https://github.com/actuarialpy/actuarialpy-core"
Issues = "https://github.com/actuarialpy/actuarialpy-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/actuarialpy"]

[tool.hatch.build.targets.wheel.force-include]
"src/actuarialpy/py.typed" = "actuarialpy/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
