[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actuarialpy"
version = "0.22.0"
description = "Experience-centered Python tools for actuarial analysis."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Michael Bryant" }
]
keywords = ["actuarial", "insurance", "loss ratio", "risk", "analytics", "claims"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1"]
dev = ["pytest>=7", "build>=1", "twine>=5"]

[project.urls]
Homepage = "https://github.com/actuarialpy/actuarialpy-core"
Repository = "https://github.com/actuarialpy/actuarialpy-core"
Issues = "https://github.com/actuarialpy/actuarialpy-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/actuarialpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
